Removed session check / Updated response (return data)
Added a very naive validator schema example
