# src/resources/examples/Login.js
@@ -11,10 +11,10 @@ export default (session) => ({
    * Authenticate user from database, file, or 3rd-party service.
    */
   authenticate: function(username, password) {
+    if (username === 'foo' && password === 'bar') {
 
-    // Define session information.
-    if (username && password) {
-      return session.role = 'admin';
+      // Define session information.
+      return (session.role = 'admin');
     }
   }
 });
